--- a/client/package.json
+++ b/client/package.json
@@ -21,6 +21,7 @@
     "@types/react-dom": "^18.0.9",
     "axios": "^1.2.1",
     "dayjs": "^1.11.7",
+    "jwt-decode": "^3.1.2",
     "moment": "^2.29.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
