--- a/client/package.json
+++ b/client/package.json
@@ -70,6 +70,7 @@
   },
   "devDependencies": {
     "@types/draftjs-to-html": "^0.8.1",
+    "@types/html-to-draftjs": "^1.4.0",
     "@types/react-draft-wysiwyg": "^1.13.4",
     "@types/react-helmet": "^6.1.6",
     "@types/uuid": "^9.0.0",
