--- a/client/package.json
+++ b/client/package.json
@@ -37,6 +37,7 @@
     "react-scripts": "5.0.1",
     "react-toastify": "^9.1.1",
     "recharts": "^2.2.0",
+    "socket.io-client": "^4.6.0",
     "typescript": "^4.9.4",
     "uuid": "^9.0.0",
     "web-vitals": "^2.1.4",
